--- a/WebContent/WEB-INF/classes/.gitignore
+++ b/WebContent/WEB-INF/classes/.gitignore
@@ -1,12 +1,23 @@
+/Date/
+/List/
+/URL/
+/array4/
+/com/
+/dissolveDatasetVector/
+/jdbc/
+/map/
+/pattern/
+/pdfTest/
+/template/
+/thread_10/
+/toPdf/
 /A.class
 /AjaxResult.class
 /DateTest.class
 /Example.class
+/Gps.class
 /Hello.class
 /LabelWhile.class
 /ListTest.class
 /ListTest2.class
-/com/
-/pdfTest/
-/template/
-/toPdf/
+/PositionUtil.class
