--- a/.classpath
+++ b/.classpath
@@ -30,7 +30,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/com.supermap.ui.controls.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-codec-1.11.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-collections4-4.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-httpclient-3.1.jar" sourcepath="C:/Users/Administrator/AppData/Local/Temp/.org.sf.feeling.decompiler1544402899099/source/commons-httpclient-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang3-3.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/core-renderer-2011.04.16-patched-play-pdf-0.8.jar"/>
@@ -51,9 +52,12 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itextpdf-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jacob-1.14.3.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jms.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jodconverter-2.2.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-20140107.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-lib-1.1-jdk13.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsoup-1.11.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/juh-3.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jurt-3.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/looks-2.1.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/nekohtml-1.9.22.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ognl-2.6.11.jar"/>
@@ -62,7 +66,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.apache.poi.xwpf.converter.core-1.0.6.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.apache.poi.xwpf.converter.pdf-1.0.6.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-1.12.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-3.17.jar" sourcepath="C:/Users/Administrator/AppData/Local/Temp/.org.sf.feeling.decompiler1544402899099/source/poi-3.17-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-3.17.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-3.9.20130515.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.17-javadoc.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.17-sources.jar"/>
@@ -71,10 +75,14 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-scratchpad-3.17.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/providerutil.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/PushJavaSDK.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ridl-3.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts2-core-2.5.14.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/unoil-3.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlbeans-2.6.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlworker-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-2.1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/flying-saucer-pdf-9.1.1.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
