--- a/WebContent/WEB-INF/classes/.gitignore
+++ b/WebContent/WEB-INF/classes/.gitignore
@@ -1,24 +1,2 @@
-/A.class
-/Date/
-/DateTest.class
-/Example.class
-/Gps.class
-/Hello.class
-/LabelWhile.class
-/List/
-/ListTest.class
-/ListTest2.class
-/PositionUtil.class
-/ScriptEngine/
-/URL/
-/array4/
-/arraycopy/
-/com/
-/dissolveDatasetVector/
-/jdbc/
-/map/
-/pattern/
 /pdfTest/
-/thread_10/
-/toPdf/
-/AjaxResult.class
+/ReadDoc/
