--- a/.classpath
+++ b/.classpath
@@ -38,6 +38,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/core-renderer-R8pre2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fastjson-1.2.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/flying-saucer-pdf-9.1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/freemarker-2.3.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fscontext.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/httpclient-4.5.3.jar"/>
@@ -50,7 +51,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itext-xtra-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/iTextAsianCmaps.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itextpdf-5.5.12.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jacob-1.14.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jacob-1.18.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jms.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jodconverter-2.2.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-20140107.jar"/>
@@ -72,7 +73,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.17-sources.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.17.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-schemas-3.17.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-scratchpad-3.17.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-scratchpad-3.17.jar" sourcepath="C:/Users/Administrator/AppData/Local/Temp/.org.sf.feeling.decompiler1555033823806/source/poi-scratchpad-3.17-sources.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/providerutil.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/PushJavaSDK.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ridl-3.0.1.jar"/>
@@ -83,6 +84,5 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlbeans-2.6.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlworker-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-2.1.3.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/flying-saucer-pdf-9.1.1.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
