--- a/WebContent/WEB-INF/classes/.gitignore
+++ b/WebContent/WEB-INF/classes/.gitignore
@@ -1,4 +1,13 @@
+/A.class
+/AjaxResult.class
+/DateTest.class
+/Example.class
+/Gps.class
+/Hello.class
+/LabelWhile.class
+/ListTest.class
+/ListTest2.class
+/PositionUtil.class
 /pdfTest/
 /ReadDoc/
-/docx/
 /template/
