--- a/.classpath
+++ b/.classpath
@@ -53,7 +53,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itextpdf-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jacob-1.18.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jms.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jodconverter-2.2.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-20140107.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-lib-1.1-jdk13.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsoup-1.11.2.jar"/>
@@ -78,11 +77,13 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/PushJavaSDK.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ridl-3.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.12.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-4.3.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-4.3.2.RELEASE.jar" sourcepath="C:/Users/Administrator/AppData/Local/Temp/.org.sf.feeling.decompiler1555033823806/source/spring-core-4.3.2.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts2-core-2.5.14.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/unoil-3.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlbeans-2.6.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlworker-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-2.1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jodconverter-2.2.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-tl-1.4.2.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
