ftl中文本有特殊符号问题及解决

--- a/WebContent/WEB-INF/classes/.gitignore
+++ b/WebContent/WEB-INF/classes/.gitignore
@@ -1,13 +1,26 @@
 /A.class
 /AjaxResult.class
+/Date/
 /DateTest.class
 /Example.class
 /Gps.class
 /Hello.class
 /LabelWhile.class
+/List/
 /ListTest.class
 /ListTest2.class
 /PositionUtil.class
-/pdfTest/
 /ReadDoc/
+/ScriptEngine/
+/URL/
+/array4/
+/arraycopy/
+/com/
+/dissolveDatasetVector/
+/docx/
+/jdbc/
+/map/
+/pattern/
+/pdf/
+/pdfTest/
 /template/
