--- a/.classpath
+++ b/.classpath
@@ -51,8 +51,12 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itext-xtra-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/iTextAsianCmaps.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itextpdf-5.5.12.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jacob-1.14.3.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jacob-1.18.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jacob.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jms.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jodconverter-2.2.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jodconverter-core-3.0-beta-4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-20140107.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-lib-1.1-jdk13.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsoup-1.11.2.jar"/>
@@ -72,18 +76,17 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.17-sources.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.17.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-schemas-3.17.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-scratchpad-3.17.jar" sourcepath="C:/Users/Administrator/AppData/Local/Temp/.org.sf.feeling.decompiler1555033823806/source/poi-scratchpad-3.17-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-scratchpad-3.17.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-tl-1.4.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/providerutil.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/PushJavaSDK.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ridl-3.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.12.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-4.3.2.RELEASE.jar" sourcepath="C:/Users/Administrator/AppData/Local/Temp/.org.sf.feeling.decompiler1555033823806/source/spring-core-4.3.2.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-4.3.2.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts2-core-2.5.14.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/unoil-3.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlbeans-2.6.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlworker-5.5.12.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-2.1.3.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jodconverter-2.2.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-tl-1.4.2.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
