oracle数据库的查询和插入

--- a/WebContent/WEB-INF/classes/.gitignore
+++ b/WebContent/WEB-INF/classes/.gitignore
@@ -1,15 +1,6 @@
-/A.class
-/AjaxResult.class
+/template/
 /Date/
-/DateTest.class
-/Example.class
-/Gps.class
-/Hello.class
-/LabelWhile.class
 /List/
-/ListTest.class
-/ListTest2.class
-/PositionUtil.class
 /ReadDoc/
 /ScriptEngine/
 /URL/
@@ -23,4 +14,15 @@
 /pattern/
 /pdf/
 /pdfTest/
-/template/
+/thread_10/
+/toPdf/
+/A.class
+/AjaxResult.class
+/DateTest.class
+/Example.class
+/Gps.class
+/Hello.class
+/LabelWhile.class
+/ListTest.class
+/ListTest2.class
+/PositionUtil.class
