XWPFTemplate转化成word文档

--- a/.classpath
+++ b/.classpath
@@ -77,7 +77,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.17.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-schemas-3.17.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-scratchpad-3.17.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-tl-1.4.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-tl-1.4.2.jar" sourcepath="C:/Users/Administrator/AppData/Local/Temp/.org.sf.feeling.decompiler1559266133874/source/poi-tl-1.4.2-sources.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/providerutil.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/PushJavaSDK.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ridl-3.0.1.jar"/>
